# pydantic-ai-todo

./: README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pydantic_ai_todo/: __init__.py  storage.py  toolset.py  types.py
tests/: __init__.py  test_storage.py  test_toolset.py  test_types.py
