[project]
name = "pydantic-ai-todo"
version = "0.1.0"
description = "Todo/task planning toolset for pydantic-ai agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "VStorm", email = "hello@vstorm.co" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["pydantic-ai>=0.1.0", "pydantic>=2.0"]

[project.urls]
Homepage = "https://github.com/vstorm-co/pydantic-ai-todo"
Repository = "https://github.com/vstorm-co/pydantic-ai-todo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_ai_todo"]

[dependency-groups]
dev = [
    "build>=1.0.0",
    "coverage>=7.0.0",
    "pyright>=1.1.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pydantic_ai_todo"]

[tool.coverage.report]
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
reportUnusedFunction = false
